# met-office-datapoint-client

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/actions/poetry-env-init/: action.yaml
.github/workflows/: merge.yaml  pr.yaml
datapoint/: __init__.py  endpoints.py  met_office_client.py  models.py  utils.py
tests/: test_met_office_client.py  test_models.py  test_utils.py
